feat: Implement additional features

--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,13 @@
     <br><label for="starName">Star Name:</label><input type="text" id="starName"></input>
     <br><label for="starId">Star ID:</label><input type="text" id="starId"></input>
     <br><br><button id="createStar" onclick="App.createStar()">Create Star</button>
-    <br><br>
-    <br>
+    <br><span id="status"></span>
 
-    <span id="status"></span>
 
 <!--Add an input box and a button to Lookup a star by ID using tokenIdToStarInfo-->
-
+    <br><br><label for="tokenId">Star/Token ID:</label><input type="text" id="tokenId"></input>
+    <br><button id="getStarInfo" onclick="App.getStarInfo()">Get Star Info</button>
+    <br><span id="status2"></span>
     <br>
 </body>
 </html>
